--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,8 @@
 	<link rel="manifest" href="%PUBLIC_URL%/manifest.json">
 	<link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
 	<title>Cosmic Web App</title>
+	<!--<script type="application/javascript">window.wsServer = "ws://10.11.162.212:8080";</script>-->
+	<script type="application/javascript">window.wsServer = "ws://localhost:8080";</script>
 </head>
 <body>
 <noscript>
